added html structure

--- a/index.html
+++ b/index.html
@@ -3,7 +3,400 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link rel="stylesheet" media="screen" href="assets/css/style.css" />
     <title>Portfolio</title>
   </head>
-  <body></body>
+  <body>
+    <!--container start-->
+    <!--home section start-->
+    <section class="home-page-container" id="home">
+      <div class="wrapper">
+        <div class="card-container">
+          <!---header start-->
+          <header>
+            <div class="wrapper">
+              <nav>
+                <div class="mobile-nav">
+                  <div class="logo">
+                    <h1><a href="#home">Ruby</a></h1>
+                  </div>
+                  <div class="menu-btn">
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                  </div>
+                </div>
+                <ul class="nav-links">
+                  <li class="active"><a href="#home">Home</a></li>
+                  <li><a href="#about">About</a></li>
+                  <li><a href="#portfolio">Projects</a></li>
+                  <li><a href="#contact">Contact</a></li>
+                </ul>
+              </nav>
+            </div>
+          </header>
+          <!---header end-->
+
+          <!--banner section start-->
+          <div class="banner-container">
+            <div class="banner-container-wrapper">
+              <h2>Hi, I'm Ruby</h2>
+              <p>
+                I am a Front End Developer, passionate about building web pages.
+              </p>
+              <div class="btn-div">
+                <div class="view-proj view">
+                  <a href="#portfolio">View Projects</a>
+                </div>
+                <div class="view-cv view">
+                  <a
+                    href="https://rubymary18.github.io/Front-End-Developer-Resume/"
+                    target="_blank"
+                    >View CV</a
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+          <!--banner section end-->
+        </div>
+      </div>
+    </section>
+    <!--home section end-->
+
+    <!--about section start-->
+    <section id="about">
+      <div class="wrapper">
+        <div class="about-container">
+          <div class="about-me">
+            <p class="about-head">ABOUT ME</p>
+            <p>
+              Resourceful individual with ability to design and develop software
+              and hardware systems.
+            </p>
+            <p>
+              I'm interested in jobs where I can contribute, learn, and grow. If
+              you have a good opportunity that matches my skills then don't
+              hesitate to contact me.
+            </p>
+            <div class="contact-btn">
+              <a href="#contact">Contact</a>
+            </div>
+          </div>
+          <div class="skills-container">
+            <p>SKILLS</p>
+            <ul class="my-skills">
+              <li>HTML 5</li>
+              <li>CSS 3</li>
+              <li>Javascript</li>
+              <li>Bootstrap 4</li>
+              <li>jQuery</li>
+              <li>Git</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!--about section end-->
+
+    <!--work section start-->
+    <section class="work" id="portfolio">
+      <div class="wrapper">
+        <h3>Projects</h3>
+        <ul class="cards">
+          <li>
+            <figure>
+              <img
+                src="./assets/images/Weather API Template.png"
+                alt="Weather API"
+              />
+            </figure>
+            <div class="info">
+              <h4>Weather API</h4>
+              <div class="project-link">
+                <div class="view-code">
+                  <p>
+                    <a
+                      href="https://github.com/RubyMary18/Weather-API-Template"
+                      target="_blank"
+                      >View Code</a
+                    >
+                  </p>
+                  <a
+                    href="https://github.com/RubyMary18/Weather-API-Template"
+                    target="_blank"
+                  >
+                    <span class="view-code-icon icon"> </span>
+                  </a>
+                </div>
+                <div class="view-project">
+                  <p>
+                    <a
+                      href="https://rubymary18.github.io/Weather-API-Template/"
+                      target="_blank"
+                    >
+                      Live Demo
+                    </a>
+                  </p>
+                  <a
+                    href="https://rubymary18.github.io/Weather-API-Template/"
+                    target="_blank"
+                    ><span class="live-demo-icon icon">demo</span></a
+                  >
+                </div>
+              </div>
+            </div>
+          </li>
+          <li>
+            <figure>
+              <img src="./assets/images/Shelf Template.png" alt="Shelf" />
+            </figure>
+            <div class="info">
+              <h4>Shelf Template</h4>
+              <div class="project-link">
+                <div class="view-code">
+                  <p>
+                    <a
+                      href="https://github.com/RubyMary18/Shelf-Template"
+                      target="_blank"
+                      >View Code
+                    </a>
+                  </p>
+                  <a
+                    href="https://github.com/RubyMary18/Shelf-Template"
+                    target="_blank"
+                    ><span class="view-code-icon icon">git</span>
+                  </a>
+                </div>
+                <div class="view-project">
+                  <p>
+                    <a
+                      href="https://rubymary18.github.io/Shelf-Template/"
+                      target="_blank"
+                      >Live Demo
+                    </a>
+                  </p>
+                  <a
+                    href="https://rubymary18.github.io/Shelf-Template/"
+                    target="_blank"
+                    ><span class="live-demo-icon icon">demo</span>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li>
+            <figure>
+              <img
+                src="./assets/images/Responsive-Testimonial-Page.png"
+                alt="Responsive Testimonial Page"
+              />
+            </figure>
+            <div class="info">
+              <h4>Responsive Testimonial</h4>
+              <div class="project-link">
+                <div class="view-code">
+                  <p>
+                    <a
+                      href="https://github.com/RubyMary18/Responsive-Testimonial-Page"
+                      target="_blank"
+                      >View Code
+                    </a>
+                  </p>
+                  <a
+                    href="https://github.com/RubyMary18/Responsive-Testimonial-Page"
+                    target="_blank"
+                    ><span class="view-code-icon icon">git</span>
+                  </a>
+                </div>
+                <div class="view-project">
+                  <p>
+                    <a
+                      href="https://rubymary18.github.io/Responsive-Testimonial-Page/"
+                      target="_blank"
+                      >Live Demo
+                    </a>
+                  </p>
+                  <a
+                    href="https://rubymary18.github.io/Responsive-Testimonial-Page/"
+                    target="_blank"
+                    ><span class="live-demo-icon icon">demo</span>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li>
+            <figure>
+              <img
+                src="./assets/images/Loopstudios-landing-page.png"
+                alt="Loopstudios Landing Page"
+              />
+            </figure>
+            <div class="info">
+              <h4>Loopstudios Landing Page</h4>
+              <div class="project-link">
+                <div class="view-code">
+                  <p>
+                    <a
+                      href="https://github.com/RubyMary18/Loopstudios-landing-page"
+                      target="_blank"
+                      >View Code
+                    </a>
+                  </p>
+                  <a
+                    href="https://github.com/RubyMary18/Loopstudios-landing-page"
+                    target="_blank"
+                    ><span class="view-code-icon icon">git</span>
+                  </a>
+                </div>
+                <div class="view-project">
+                  <p>
+                    <a
+                      href="https://rubymary18.github.io/Loopstudios-landing-page/"
+                      target="_blank"
+                      >Live Demo
+                    </a>
+                  </p>
+                  <a
+                    href="https://rubymary18.github.io/Loopstudios-landing-page/"
+                    target="_blank"
+                    ><span class="live-demo-icon icon">demo</span>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li>
+            <figure>
+              <img
+                src="./assets/images/Designerd-Template.png"
+                alt="Designerd"
+              />
+            </figure>
+            <div class="info">
+              <h4>Designerd Template</h4>
+              <div class="project-link">
+                <div class="view-code">
+                  <p>
+                    <a
+                      href="https://github.com/RubyMary18/Designerd-Template"
+                      target="_blank"
+                      >View Code
+                    </a>
+                  </p>
+                  <a
+                    href="https://github.com/RubyMary18/Designerd-Template"
+                    target="_blank"
+                    ><span class="view-code-icon icon">git</span>
+                  </a>
+                </div>
+                <div class="view-project">
+                  <p>
+                    <a
+                      href="https://rubymary18.github.io/Designerd-Template/#"
+                      target="_blank"
+                      >Live Demo
+                    </a>
+                  </p>
+                  <a
+                    href="https://rubymary18.github.io/Designerd-Template/#"
+                    target="_blank"
+                    ><span class="live-demo-icon icon">demo</span>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li>
+            <figure>
+              <img
+                src="./assets/images/Sortable-Image-Gallery.png"
+                alt="Sortable Image Gallery"
+              />
+            </figure>
+            <div class="info">
+              <h4>Sortable Image Gallery</h4>
+              <div class="project-link">
+                <div class="view-code">
+                  <p>
+                    <a
+                      href="https://github.com/RubyMary18/Sortable-Image-Gallery"
+                      target="_blank"
+                      >View Code
+                    </a>
+                  </p>
+                  <a
+                    href="https://github.com/RubyMary18/Sortable-Image-Gallery"
+                    target="_blank"
+                    ><span class="view-code-icon icon">git</span>
+                  </a>
+                </div>
+                <div class="view-project">
+                  <p>
+                    <a
+                      href="https://rubymary18.github.io/Sortable-Image-Gallery/"
+                      target="_blank"
+                      >Live Demo
+                    </a>
+                  </p>
+                  <a
+                    href="https://rubymary18.github.io/Sortable-Image-Gallery/"
+                    target="_blank"
+                    ><span class="live-demo-icon icon">demo</span>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <!--work section end-->
+
+    <!--contact section start-->
+    <section id="contact">
+      <div class="wrapper">
+        <div class="clay-card">
+          <div class="contact-info-container">
+            <h5>Contact Me</h5>
+            <ul class="icon-container">
+              <li>
+                <span class="mail-icon"></span>
+                <p>rubymary18@gmail.com</p>
+              </li>
+              <li>
+                <span class="phone-icon"></span>
+                <p>8355839378</p>
+              </li>
+            </ul>
+          </div>
+          <ul class="social-links">
+            <li class="contact-icon git">
+              <a href="https://github.com/RubyMary18" target="_blank">Git</a>
+            </li>
+            <li class="contact-icon linked-in">
+              <a href="https://www.linkedin.com/in/rubymary/" target="_blank"
+                >Linked in</a
+              >
+            </li>
+            <li class="contact-icon fcc">
+              <a href="https://www.freecodecamp.org/ruby%20mary" target="_blank"
+                >Free code camp</a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+    <!--contact section end-->
+
+    <!--container end-->
+
+    <script src="./assets/js/script.js"></script>
+  </body>
 </html>
