added news home page project

--- a/index.html
+++ b/index.html
@@ -153,6 +153,44 @@
           </li>
           <li>
             <figure>
+              <img src="./assets/images/News Home Page.png" alt="Designerd" />
+            </figure>
+            <div class="info">
+              <h4>News Home Page</h4>
+              <div class="project-link">
+                <div class="view-code">
+                  <p>
+                    <a
+                      href="https://github.com/RubyMary18/News-home-page"
+                      target="_blank"
+                      >View Code
+                    </a>
+                  </p>
+                  <a
+                    href="https://github.com/RubyMary18/News-home-page"
+                    target="_blank"
+                    ><span class="view-code-icon icon">git</span>
+                  </a>
+                </div>
+                <div class="view-project">
+                  <p>
+                    <a
+                      href="https://rubymary18.github.io/News-home-page/"
+                      target="_blank"
+                      >Live Demo
+                    </a>
+                  </p>
+                  <a
+                    href="https://rubymary18.github.io/News-home-page/"
+                    target="_blank"
+                    ><span class="live-demo-icon icon">demo</span>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li>
+            <figure>
               <img src="./assets/images/Shelf Template.png" alt="Shelf" />
             </figure>
             <div class="info">
@@ -264,47 +302,6 @@
                   </p>
                   <a
                     href="https://rubymary18.github.io/Loopstudios-landing-page/"
-                    target="_blank"
-                    ><span class="live-demo-icon icon">demo</span>
-                  </a>
-                </div>
-              </div>
-            </div>
-          </li>
-          <li>
-            <figure>
-              <img
-                src="./assets/images/Designerd-Template.png"
-                alt="Designerd"
-              />
-            </figure>
-            <div class="info">
-              <h4>Designerd Template</h4>
-              <div class="project-link">
-                <div class="view-code">
-                  <p>
-                    <a
-                      href="https://github.com/RubyMary18/Designerd-Template"
-                      target="_blank"
-                      >View Code
-                    </a>
-                  </p>
-                  <a
-                    href="https://github.com/RubyMary18/Designerd-Template"
-                    target="_blank"
-                    ><span class="view-code-icon icon">git</span>
-                  </a>
-                </div>
-                <div class="view-project">
-                  <p>
-                    <a
-                      href="https://rubymary18.github.io/Designerd-Template/#"
-                      target="_blank"
-                      >Live Demo
-                    </a>
-                  </p>
-                  <a
-                    href="https://rubymary18.github.io/Designerd-Template/#"
                     target="_blank"
                     ><span class="live-demo-icon icon">demo</span>
                   </a>
