--- a/index.html
+++ b/index.html
@@ -111,6 +111,47 @@
           <li>
             <figure>
               <img
+                src="./assets/images/E-Commerce Product Page.png"
+                alt="E-Commerce Product Page"
+              />
+            </figure>
+            <div class="info">
+              <h4>E-Commerce Product Page</h4>
+              <div class="project-link">
+                <div class="view-code">
+                  <p>
+                    <a
+                      href="https://github.com/RubyMary18/E-Commerce-Product-Page"
+                      target="_blank"
+                      >View Code
+                    </a>
+                  </p>
+                  <a
+                    href="https://github.com/RubyMary18/E-Commerce-Product-Page"
+                    target="_blank"
+                    ><span class="view-code-icon icon">git</span>
+                  </a>
+                </div>
+                <div class="view-project">
+                  <p>
+                    <a
+                      href="https://rubymary18.github.io/E-Commerce-Product-Page/"
+                      target="_blank"
+                      >Live Demo
+                    </a>
+                  </p>
+                  <a
+                    href="https://rubymary18.github.io/E-Commerce-Product-Page/"
+                    target="_blank"
+                    ><span class="live-demo-icon icon">demo</span>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li>
+            <figure>
+              <img
                 src="./assets/images/Weather API Template.png"
                 alt="Weather API"
               />
@@ -220,47 +261,6 @@
                   </p>
                   <a
                     href="https://rubymary18.github.io/Shelf-Template/"
-                    target="_blank"
-                    ><span class="live-demo-icon icon">demo</span>
-                  </a>
-                </div>
-              </div>
-            </div>
-          </li>
-          <li>
-            <figure>
-              <img
-                src="./assets/images/Responsive-Testimonial-Page.png"
-                alt="Responsive Testimonial Page"
-              />
-            </figure>
-            <div class="info">
-              <h4>Responsive Testimonial</h4>
-              <div class="project-link">
-                <div class="view-code">
-                  <p>
-                    <a
-                      href="https://github.com/RubyMary18/Responsive-Testimonial-Page"
-                      target="_blank"
-                      >View Code
-                    </a>
-                  </p>
-                  <a
-                    href="https://github.com/RubyMary18/Responsive-Testimonial-Page"
-                    target="_blank"
-                    ><span class="view-code-icon icon">git</span>
-                  </a>
-                </div>
-                <div class="view-project">
-                  <p>
-                    <a
-                      href="https://rubymary18.github.io/Responsive-Testimonial-Page/"
-                      target="_blank"
-                      >Live Demo
-                    </a>
-                  </p>
-                  <a
-                    href="https://rubymary18.github.io/Responsive-Testimonial-Page/"
                     target="_blank"
                     ><span class="live-demo-icon icon">demo</span>
                   </a>
